# RayTracer

./: .gitignore  CMakeLists.txt  README.md
src/: canvas.cpp  canvas.h  matrix.cpp  matrix.h  out.ppm  ray.cpp  ray.h  rayOut  reflectOut  reflection.cpp  reflection.h  tuples.cpp  tuples.h
src/matrix.o.dSYM/Contents/: Info.plist
tests/: CMakeLists.txt  CanvasTests.cpp  IntegrationCheckpoint.cpp  MatrixTests.cpp  RaysTests.cpp  ReflectionTests.cpp  TupleTests.cpp
